...
    var id: String {
        rawValue
    }

    var title: String {
        switch self {
        case .teleprompter: "Teleprompter"
        case .reaction: "Reaction"
        }
    }

    var subtitle: String {
        switch self {
...
